--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "vercel-build": "echo vercel"
   },
   "dependencies": {
+    "cheerio": "^1.0.0-rc.12",
     "chrome-aws-lambda": "^6",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^16.3.1",
     "express": "~4.16.1",
     "morgan": "~1.9.1",
+    "play-sound": "^1.1.6",
     "proxy-chain": "^2.4.0",
     "puppeteer": "^21.7.0",
     "puppeteer-core": "^6"
